Remove reference to MaxPermSize